add rest call + tests
