# src/model/UserRegistry.ts
@@ -1,3 +1,5 @@
+import { UserResource } from '../api/generated/b4f-dashboard/UserResource';
+
 export type UserRegistry = {
   taxCode: string;
   name: string;
@@ -5,3 +7,11 @@ export type UserRegistry = {
   email: string;
   certification: boolean;
 };
+
+export const userResource2UserRegistry = (resource: UserResource): UserRegistry => ({
+  taxCode: resource.fiscalCode,
+  name: resource.name,
+  surname: resource.surname,
+  email: resource.email,
+  certification: resource.certification,
+});
